Lekce 06 perceptron image

--- a/06-predictors/lekce06-predictors.tex
+++ b/06-predictors/lekce06-predictors.tex
@@ -724,5 +724,14 @@ Výhody:
 \end{frame}
 
 
+\begin{frame}
+\frametitle{Perceptron}
+
+\begin{center}
+\includegraphics[width=0.6\textwidth]{neuron.pdf}
+\end{center}
+
+\end{frame}
+
 \end{document}
 
